Сделал блок portfolio

--- a/source/index.html
+++ b/source/index.html
@@ -33,15 +33,15 @@
         <p class="page-main__text">we know that the quality of our work is a base of our success...</p>
         <ul class="portfolio__list">
           <li class="portfolio__item">
-            <img class="portfolio__img" src="#" width="260" height="155">
+            <img class="portfolio__img" src="img/260x155.png" width="260" height="155">
             <p class="portfolio__subtitle">Print Folio</p>
           </li>
           <li class="portfolio__item portfolio__item--active">
-            <img class="portfolio__img" src="#" width="318" height="193">
+            <img class="portfolio__img" src="img/318x193.png" width="318" height="193">
             <p class="portfolio__subtitle">Web Folio</p>
           </li>
           <li class="portfolio__item">
-            <img class="portfolio__img" src="#" width="260" height="155">
+            <img class="portfolio__img" src="img/260x155.png" width="260" height="155">
             <p class="portfolio__subtitle">Photo Folio</p>
           </li>
         </ul>
